--- a/blog/static/styles/style.css
+++ b/blog/static/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playwrite+HR:wght@100..400&display=swap');
 
 :root{
     --bg: #FAF8F2;
@@ -32,12 +33,12 @@ body{
 
 .navbar{
     background: var(--bgs);
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .footer{
     background: var(--bgs);
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .listItemTitleBox{
