--- a/blog/static/styles/style.css
+++ b/blog/static/styles/style.css
@@ -5,7 +5,7 @@
     --bg: #FAF8F2;
     --bgs: #D4D1C9;
     --txt: #000000;
-    --sb: #222222;
+    --sb: #333333;
 }
 
 *{
@@ -32,13 +32,15 @@ body{
 }
 
 .navbar{
+    padding: 2px;
     background: var(--bgs);
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 }
 
 .footer{
+    padding: 2px;
     background: var(--bgs);
-    margin-top: 30px;
+    margin-top: 25px;
 }
 
 .listItemTitleBox{
@@ -53,6 +55,7 @@ h1{
 
 h3{
     font-weight: 500;
+    color: var(--sb);
 }
 
 .listItemLink{
@@ -70,7 +73,7 @@ h3{
 }
 
 .article{
-    white-space: pre-wrap;
+    white-space: pre-line;
 }
 
 p{
