--- a/blog/static/styles/style.css
+++ b/blog/static/styles/style.css
@@ -14,6 +14,7 @@
     font-family: "Fira Mono", monospace;
     font-size: 15px;
     letter-spacing: -0.5px;
+    word-spacing: -1.25px;
     line-height: 115%;
 }
 
@@ -24,10 +25,10 @@ body{
 
 .container{
     max-width: 80ch;
-    padding-top: 15px;
-    padding-left: 7px;
-    padding-right: 7px;
-    padding-bottom: 25px;
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
     margin: auto;
 }
 
@@ -45,7 +46,7 @@ body{
 
 .listItemTitleBox{
     border-bottom: solid 1px var(--sb);
-    padding-bottom: 2px;
+    padding-bottom: 1px;
     margin-bottom: 10px;
 }
 
@@ -69,11 +70,11 @@ h3{
 
 .content{
     margin-top: 25px;
-    text-align: justify;
 }
 
 .article{
-    white-space: pre-line;
+    white-space: pre-wrap;
+    text-align: justify;
 }
 
 p{
