--- a/blog/layouts/partials/navbar.html
+++ b/blog/layouts/partials/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
     <div class="link">
-        <a href="/">[home]</a>
+        <a href="/" class="linkText">[home]</a>
     </div>
 </nav>
