--- a/blog/layouts/partials/footer.html
+++ b/blog/layouts/partials/footer.html
@@ -1,5 +1,14 @@
 <div class="footer">
     <div class="link">
-        <a href="https://twitter.com">[twitter]</a>
+        <a href="https://twitter.com" class="linkText">[twitter]</a>
+    </div>
+    <div class="link">
+        <a href="https://twitter.com" class="linkText">[bluesky]</a>
+    </div>
+    <div class="link">
+        <a href="https://twitter.com" class="linkText">[mail]</a>
+    </div>
+    <div class="link">
+        <a href="https://twitter.com" class="linkText">[session]</a>
     </div>
 </div>
