--- a/blog/layouts/_default/list.html
+++ b/blog/layouts/_default/list.html
@@ -11,7 +11,7 @@
                     </div>
                     <div class="listItemSubtitleBox">
                         <h3 class="listItemSubtitle">
-                            ❱❱ {{ .Params.Subtitle }}
+                            ❯❯ {{ .Params.Subtitle }}
                         </h3>
                     </div>
                 </div>
