--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -8,7 +8,7 @@
         </div>
         <div class="listItemSubtitleBox">
             <h3 class="listItemSubtitle">
-                ❱❱ {{ .Params.Subtitle }}
+                ❯❯ {{ .Params.Subtitle }}
             </h3>
         </div>
         <div class="content">
