--- a/blog/layouts/partials/footer.html
+++ b/blog/layouts/partials/footer.html
@@ -1,14 +1,17 @@
 <div class="footer">
-    <div class="link">
+    {{/*  <div class="link">
         <a href="https://twitter.com" class="linkText">[twitter]</a>
-    </div>
+    </div>  */}}
     <div class="link">
-        <a href="https://twitter.com" class="linkText">[bluesky]</a>
+        <a href="https://bsky.pracht.report/" class="linkText">[bsky]</a>
     </div>
-    <div class="link">
+    {{/*  <div class="link">
         <a href="https://twitter.com" class="linkText">[mail]</a>
     </div>
     <div class="link">
         <a href="https://twitter.com" class="linkText">[session]</a>
+    </div>  */}}
+    <div class="bottom">
+        © 2024 pracht
     </div>
 </div>
