--- a/blog/layouts/partials/footer.html
+++ b/blog/layouts/partials/footer.html
@@ -5,10 +5,10 @@
     <div class="link">
         <a href="https://bsky.pracht.report/" class="linkText">[bsky]</a>
     </div>
-    {{/*  <div class="link">
-        <a href="https://twitter.com" class="linkText">[mail]</a>
-    </div>
     <div class="link">
+        <a href="https://twitter.pracht.report/" class="linkText">[twitter]</a>
+    </div>
+    {{/*  <div class="link">
         <a href="https://twitter.com" class="linkText">[session]</a>
     </div>  */}}
     <div class="bottom">
