--- a/blog/static/styles/style.css
+++ b/blog/static/styles/style.css
@@ -32,6 +32,11 @@ body{
     margin: auto;
 }
 
+.separator{
+    height: 5px;
+    background: var(--s);
+}
+
 .navbar{
     display: flex;
     padding: 2px;
@@ -59,7 +64,7 @@ body{
 
 h1{
     font-weight: 700;
-    font-size: 19px;
+    font-size: 20px;
 }
 
 h3{
@@ -86,13 +91,13 @@ h3{
 }
 
 p{
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
     margin-bottom: 25px;
 }
 
 .contentFooter{
-    font-size: 17px;
+    font-size: 16px;
     display: flex;
     justify-content: space-between;
 }
