--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -11,6 +11,8 @@
                 ❯❯ {{ .Params.Subtitle }}
             </h3>
         </div>
+        <div class="separator">
+        </div>
         <div class="content">
             <div class="article">{{.Content}}</div>
             <div class="contentFooter">
