--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -11,7 +11,7 @@
                 ❯❯ {{ .Params.Subtitle }}
             </h3>
         </div>
-        <div class="separator">
+        <div id="stripes">
         </div>
         <div class="content">
             <div class="article">{{.Content}}</div>
