--- a/blog/public/styles/style.css
+++ b/blog/public/styles/style.css
@@ -59,7 +59,7 @@ body{
 
 h1{
     font-weight: 700;
-    font-size: 19px;
+    font-size: 20px;
 }
 
 h3{
@@ -76,23 +76,19 @@ h3{
     margin-bottom: 20px;
 }
 
-.content{
-    margin-top: 25px;
-}
-
 .article{
     white-space: pre-wrap;
     text-align: justify;
 }
 
 p{
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
     margin-bottom: 25px;
 }
 
 .contentFooter{
-    font-size: 17px;
+    font-size: 16px;
     display: flex;
     justify-content: space-between;
 }
@@ -120,3 +116,11 @@ a{
     margin-left: auto;
     margin-top: auto;
 }
+
+div#stripes {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 15px;
+    background-image: linear-gradient(135deg, var(--s) 25%, transparent 25%, transparent 50%, var(--s) 50%, var(--s) 75%, transparent 75%, #fff);
+    background-size: 25px 25px;
+  }
