--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -31,6 +31,9 @@
                 <h3 class="author">— NB</h3>
             </div>
         </div>
+        <div class="slug">
+            {{ .Slug }}
+        </div>
     </div>
 </div>
 {{ end }}
