--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -11,7 +11,7 @@
                 [{{ .Params.Edition }}]
             </div>
             <div class="length">
-                {{ .Content | countwords }} Zeichen
+                {{ .Content | countwords }} Wörter
             </div>
         </div>
         <div class="listItemTitleBox">
