--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -5,7 +5,7 @@
         </div>
         <div class="topbar">
             <div class="no">
-                Ausgabe {{ .Params.No }}
+                Beitrag {{ .Params.No }}
             </div>
             <div class="neo">
                 [{{ .Params.Edition }}]
