--- a/blog/public/styles/style.css
+++ b/blog/public/styles/style.css
@@ -46,6 +46,7 @@ body{
     padding: 2px;
     background: var(--s);
     gap: 10px;
+    margin-top: 25px;
 }
 
 .listItemSubtitle{
@@ -73,7 +74,7 @@ h3{
 }
 
 .listItem{
-    margin-bottom: 25px;
+    margin-bottom: 20px;
 }
 
 .article{
@@ -154,6 +155,9 @@ p{
     word-spacing: 0px;
     letter-spacing: -1.5px;
     color: var(--d);
+    flex-grow: 1;
+    flex-basis: 0;
+    text-align: right;
 }
 
 .linkText{
@@ -190,10 +194,11 @@ time{
     font-size: 15px;
     word-spacing: 1.5px;
     color: var(--d);
+    flex-grow: 1;
+    flex-basis: 0;
 }
 
 .slug{
-    margin-top: 25px;
+    margin-top: auto;
     font-size: 9px;
-    text-align: center;
 }
