--- a/blog/layouts/partials/footer.html
+++ b/blog/layouts/partials/footer.html
@@ -1,17 +1,11 @@
 <div class="footer">
-    {{/*  <div class="link">
-        <a href="https://twitter.com" class="linkText">[twitter]</a>
-    </div>  */}}
     <div class="link">
         <a href="https://bsky.pracht.report/" class="linkText">[bsky]</a>
     </div>
     <div class="link">
         <a href="https://twitter.pracht.report/" class="linkText">[twitter]</a>
     </div>
-    {{/*  <div class="link">
-        <a href="https://twitter.com" class="linkText">[session]</a>
-    </div>  */}}
-    <div class="bottom">
+    <div class="copyright">
         © 2024 pracht
     </div>
 </div>
