--- a/blog/layouts/_default/list.html
+++ b/blog/layouts/_default/list.html
@@ -1,16 +1,16 @@
 {{ define "main" }}
-<div class="list">
+<div class="articleList">
     {{ range .Paginator.Pages }}
-        <div class="listItem">
-            <a href={{.Permalink}} class="listItemLink">
-                <div class="listItemContainer">
-                    <div class="listItemTitleBox">
-                        <h1 class="listItemTitle">
+        <div class="articleHeadList">
+            <a href={{.Permalink}} class="articleLink">
+                <div class="articleHeadContainer">
+                    <div class="articleTitleBox">
+                        <h2 class="articleTitle">
                             {{ .Title }}
-                        </h1>
+                        </h2>
                     </div>
-                    <div class="listItemSubtitleBox">
-                        <h3 class="listItemSubtitle">
+                    <div class="articleSubtitleBox">
+                        <h3 class="articleSubtitle">
                             {{ .Params.Subtitle }}
                         </h3>
                     </div>
