--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -32,7 +32,7 @@
         <div class="informationBar">
             <time class="time">{{ dateFormat .Site.Params.dateFormat .Date }}</time>
             <div class="id">
-                [{{ .Slug }}]
+                #{{ .Slug }}
             </div>
             <h3 class="author">— NB</h3>
         </div>
