--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -8,7 +8,7 @@
                 Beitrag {{ .Params.Number }}
             </div>
             <div class="edition">
-                [{{ .Params.Edition }}]
+                {{ .Params.Edition }}
             </div>
             <div class="wordCount">
                 {{ .Content | countwords }} Wörter
