--- a/blog/public/styles/style.css
+++ b/blog/public/styles/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 :root{
     --b: #FEFCFA;
@@ -55,11 +56,30 @@ a{
 }
 
 .navbar{
+    margin-bottom: 25px;
+    display: block;
+}
+
+.logo{
     display: flex;
+    justify-content: center;
+    gap: 15px;
+    align-items: center;
+    font-family: "Space Mono", monospace;
+    font-size: 50px;
+    text-align: center;
+    background: var(--n);
+    line-height: 130%;
+    color: var(--b);
+    padding: 10px;
+    letter-spacing: -4px;
+}
+
+.navbarBox{
+    display: flex;
+    gap: 10px;
     padding: 2px;
     background: var(--s);
-    gap: 10px;
-    margin-bottom: 25px;
 }
 
 .footer{
