--- a/blog/layouts/partials/navbar.html
+++ b/blog/layouts/partials/navbar.html
@@ -3,6 +3,11 @@
         <div class="link">
             <a href="/" class="linkText">[home]</a>
         </div>
+        <div class="toggle">
+            <div class="toggleText">
+                [switch]
+            </div>
+        </div>
     </div>
     <div class="logo">
         <h1>PRACHT</h1>
