--- a/blog/layouts/partials/navbar.html
+++ b/blog/layouts/partials/navbar.html
@@ -5,7 +5,7 @@
         </div>
         <div class="toggle">
             <div class="toggleText">
-                [switch]
+                [lght/drk]
             </div>
         </div>
     </div>
