--- a/blog/layouts/_default/list.html
+++ b/blog/layouts/_default/list.html
@@ -17,6 +17,6 @@
                 </div>
             </a>
         </div>
-    {{ end }}
+    {{ end }} {{ template "_internal/pagination.html" . }}
 </div>
 {{ end }}
