--- a/blog/layouts/partials/navbar.html
+++ b/blog/layouts/partials/navbar.html
@@ -3,13 +3,18 @@
         <div class="link">
             <a href="/" class="linkText">[home]</a>
         </div>
+        <div class="link">
+            <a href="/categories" class="linkText">[themen]</a>
+        </div>
         <div class="toggle">
             <div class="toggleText">
                 [lght/drk]
             </div>
         </div>
     </div>
-    <div class="logo">
-        <h1>PRACHT</h1>
-    </div>
+    <a href="/">
+        <div class="logo">
+            <h1>PRACHT</h1>
+        </div>
+    </a>
 </nav>
