--- a/blog/layouts/_default/baseof.html
+++ b/blog/layouts/_default/baseof.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content={{or .Params.subtitle .Site.Params.description }}>
+    <meta http-equiv="Content-Language" content="de,en">
     <link rel="stylesheet" href="/styles/style.css">
-    <title>pracht</title>
+    <title>{{ .Title }}</title>
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
 </head>
 <body>
