--- a/blog/static/styles/style.css
+++ b/blog/static/styles/style.css
@@ -83,7 +83,10 @@ a{
 }
 
 .logo{
-    -webkit-user-select: none;       
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
