--- a/blog/static/styles/style.css
+++ b/blog/static/styles/style.css
@@ -33,6 +33,16 @@ body.dark{
     --n: #CC00AA;
 }
 
+h1{
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 h2{
     font-weight: 700;
     font-size: 20px;
