--- a/blog/layouts/partials/navbar.html
+++ b/blog/layouts/partials/navbar.html
@@ -12,7 +12,7 @@
             </div>
         </div>
     </div>
-    <a href="/">
+    <a class="logoLink" href="/">
         <div class="logo">
             <h1>PRACHT</h1>
         </div>
