--- a/blog/static/styles/style.css
+++ b/blog/static/styles/style.css
@@ -33,16 +33,6 @@ body.dark{
     --n: #CC00AA;
 }
 
-h1{
-    -webkit-tap-highlight-color: transparent;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
 h2{
     font-weight: 700;
     font-size: 20px;
@@ -92,7 +82,7 @@ a{
     display: block;
 }
 
-.logo{
+.logoLink{
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -100,6 +90,9 @@ a{
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.logo{
     display: flex;
     justify-content: center;
     gap: 15px;
