--- a/blog/public/styles/style.css
+++ b/blog/public/styles/style.css
@@ -83,7 +83,8 @@ a{
 }
 
 .logo{
-    -webkit-user-select: none;       
+    -webkit-user-select: none;
+    -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
@@ -95,9 +96,10 @@ a{
     font-size: 50px;
     text-align: center;
     background: var(--n);
-    line-height: 130%;
+    line-height: 100%;
     color: var(--b);
-    padding: 10px;
+    padding-top: 18px;
+    padding-bottom: 20px;
     letter-spacing: -4px;
 }
 
