--- a/blog/public/styles/style.css
+++ b/blog/public/styles/style.css
@@ -83,15 +83,12 @@ a{
 }
 
 .logo{
+    overflow: hidden;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    align-items: center;
     font-family: "Space Mono", monospace;
     font-size: 50px;
     text-align: center;
