--- a/blog/layouts/partials/navbar.html
+++ b/blog/layouts/partials/navbar.html
@@ -6,13 +6,13 @@
         <div class="link">
             <a href="/categories" class="linkText">[themen]</a>
         </div>
-        <div class="toggle">
+        {{/*  <div class="toggle">
             <div class="toggleText">
                 [lght/drk]
             </div>
-        </div>
+        </div>  */}}
     </div>
-    <div class="logo">
+    {{/*  <div class="logo">
         <h1>PRACHT</h1>
-    </div>
+    </div>  */}}
 </nav>
