--- a/blog/layouts/_default/baseof.html
+++ b/blog/layouts/_default/baseof.html
@@ -15,6 +15,6 @@
         {{ block "main" . }} {{ end }}
         {{ partial "footer" . }}
     </div>
-    <script src="/js/app.js"></script>
+    {{/*  <script src="/js/app.js"></script>  */}}
 </body>
 </html>
