--- a/blog/layouts/_default/single.html
+++ b/blog/layouts/_default/single.html
@@ -36,6 +36,10 @@
                 </div>
             </div>
         </div>
+        <div class="articleImageBox">
+            <img class="articleImage" src={{.Params.image}} loading="lazy" alt={{.Params.alt}}>
+            <div class="articleImageAlt">{{ .Params.alt }}</div>
+        </div>
         <div class="articleContent">{{.Content}}</div>
         <div class="informationBar">
             <time class="time">{{ dateFormat .Site.Params.dateFormat .Date }}</time>
