--- a/blog/layouts/_default/baseof.html
+++ b/blog/layouts/_default/baseof.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         {{ partial "navbar" . }}
+        <div class="logo">PRACHT</div>
         {{ block "main" . }} {{ end }}
         {{ partial "footer" . }}
     </div>
