--- a/blog/static/styles/style.css
+++ b/blog/static/styles/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 :root{
     --b: #FEFCFA;
@@ -84,7 +86,6 @@ a{
 }
 
 .navbar{
-    margin-bottom: 20px;
     display: block;
 }
 
@@ -95,15 +96,16 @@ a{
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    font-family: "Space Mono", monospace;
-    font-size: 50px;
+    font-family: "Righteous", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 35px;
+    font-optical-sizing: auto;
     text-align: center;
     background: var(--n);
-    line-height: 100%;
+    line-height: 110%;
     color: var(--b);
-    padding-top: 18px;
-    padding-bottom: 20px;
-    letter-spacing: -4px;
+    margin-bottom: 20px;
 }
 
 .navbarBox{
