--- a/blog/layouts/_default/baseof.html
+++ b/blog/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         {{ partial "navbar" . }}
-        <div class="logo">PRACHT</div>
+        <a href="/"><div class="logo">PRACHT</div></a>
         {{ block "main" . }} {{ end }}
         {{ partial "footer" . }}
     </div>
