--- a/blog/layouts/_default/baseof.html
+++ b/blog/layouts/_default/baseof.html
@@ -12,10 +12,16 @@
 <body>
     <div class="container">
         {{ partial "navbar" . }}
-        <a href="/"><div class="logo">PRACHT</div></a>
+        <a href="/">
+            <div class="logo">
+                <canvas id="logoCanvas"></canvas>
+                <div class="logoText">PRACHT</div>
+            </div>
+        </a>
         {{ block "main" . }} {{ end }}
         {{ partial "footer" . }}
     </div>
-    {{/*  <script src="/js/app.js"></script>  */}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="/js/logo-shader.js"></script>
 </body>
 </html>
