--- a/blog/public/styles/style.css
+++ b/blog/public/styles/style.css
@@ -130,8 +130,8 @@ a{
 
 .articleHead{
     margin-bottom: 15px;
-    margin-top: 17.5px;
-    padding-bottom: 4px;
+    margin-top: 15px;
+    padding-bottom: 3.7px;
     border-bottom: 1.5px solid var(--s);
 }
 
@@ -277,4 +277,37 @@ div#stripes {
 
 .articleImage{
     width: 100%;
+}
+
+.logo {
+    position: relative;
+    width: 100%;
+    height: 40px;
+    overflow: hidden;
+    margin-bottom: 20px;
+    background: none; /* Remove any existing background */
+}
+
+#logoCanvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.logoText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: "Righteous", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 35px;
+    font-optical-sizing: auto;
+    text-align: center;
+    line-height: 110%;
+    color: var(--b);
+    z-index: 1;
 }
