--- a/blog/layouts/partials/navbar.html
+++ b/blog/layouts/partials/navbar.html
@@ -15,4 +15,12 @@
     {{/*  <div class="logo">
         <h1>PRACHT</h1>
     </div>  */}}
+    <a href="/">
+        <div class="logo">
+            <canvas id="logoCanvas"></canvas>
+            <div class="logoText">PRACHT</div>
+        </div>
+    </a>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="/js/logo-shader.js"></script>
 </nav>
