--- a/blog/public/styles/style.css
+++ b/blog/public/styles/style.css
@@ -86,7 +86,10 @@ a{
 }
 
 .navbar{
+    margin-bottom: 20px;
     display: block;
+    position: sticky;
+    top: 0px;
 }
 
 .logo{
@@ -105,7 +108,6 @@ a{
     background: var(--n);
     line-height: 110%;
     color: var(--b);
-    margin-bottom: 20px;
 }
 
 .navbarBox{
@@ -284,7 +286,6 @@ div#stripes {
     width: 100%;
     height: 40px;
     overflow: hidden;
-    margin-bottom: 20px;
     background: none; /* Remove any existing background */
 }
 
