--- a/blog/public/styles/style.css
+++ b/blog/public/styles/style.css
@@ -146,11 +146,22 @@ a{
     color: var(--t);
 }
 
-div#stripes {
+@keyframes moveStripes {
+    0% {
+      background-position: 25px 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
+  
+  div#stripes {
     height: 10px;
     background-image: linear-gradient(135deg, var(--s) 25%, transparent 25%, transparent 50%, var(--s) 50%, var(--s) 75%, transparent 75%, #fff);
     background-size: 25px 25px;
-}
+    animation: moveStripes 4s linear infinite;
+  }
+  
 
 .informationBar{
     font-family: "Public Sans", sans-serif;
