--- a/blog/static/styles/style.css
+++ b/blog/static/styles/style.css
@@ -133,28 +133,8 @@ a{
     margin-bottom: 15px;
     margin-top: 15px;
     padding-bottom: 3.7px;
-  }
-  
-  .articleHead::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 1.5px;
-    background: linear-gradient(to right, var(--s), var(--d), var(--s));
-    background-size: 200% 100%;
-    animation: shimmer 5s infinite;
-  }
-  
-  @keyframes shimmer {
-    0% {
-      background-position: 100% 0;
-    }
-    100% {
-      background-position: -100% 0;
-    }
-  }
+    border-bottom: 1.5px solid var(--s);
+}
 
 .articleHeadList:not(:last-child){
     margin-bottom: 15px;
